visibility fixes

--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ header {
 
 .intro h1 {
     font-weight: bold;
+    color:rgb(73, 73, 73)
 }
 
 .logo a {
